Responsividade. Adição de funcionalidade com opção de trocar background

--- a/Dia 1/index.html
+++ b/Dia 1/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- Bateria (instrumento musical) em Javascript -->
     <!-- A kind of drum kit in JS-->
-    
+    <div class="change">Change background</div>
     <!--    Criando a referêcnia às teclas   -->
     <div class="keys">
 
@@ -47,11 +47,11 @@
             </div>
             <div data-key='76' class="key">
                 <kbd>L</kbd>
-                <span class="sound-key">caixa</span>
+                <span class="sound-key">snare</span>
             </div>
             <div data-key='186' class="key">
                 <kbd>Ç</kbd>
-                <span class="sound-key">surdo</span>
+                <span class="sound-key">tom</span>
             </div>
 
     </div>
