--- a/Dia 2/index.html
+++ b/Dia 2/index.html
@@ -11,6 +11,7 @@
     <h1>JS Memory Game</h1>
     <div id='container'></div>
 
+    <script src="js/jquery.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 </html>
