--- a/Dia 2/index.html
+++ b/Dia 2/index.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day 2 </title>
     <link rel="stylesheet" href="style/styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
     
     <h1>JS Memory Game</h1>
+    <div id="msg">
+        <div id="show"><p>You Won!</p></div>
+    </div>
     <div id='container'></div>
 
     <script src="js/jquery.js"></script>
     <script src="js/scripts.js"></script>
+
 </body>
 </html>
