--- a/Day 7/index.html
+++ b/Day 7/index.html
@@ -13,9 +13,9 @@
     <div class="panel">
         <h2 id="timer">25:00</h2>
         <div class="row_options">
-            <p class="start"><img src="img/play-button.svg"></p>
-            <p class="pause"><img src="img/pause-button.svg"></p>
-            <p class="reset"><img src="img/restart-button.svg"></p>
+            <p class="buttons start"><img src="img/play-button.svg"></p>
+            <p class="buttons pause"><img src="img/pause-button.svg"></p>
+            <p class="buttons reset"><img src="img/restart-button.svg"></p>
         </div>
     </div>
 
