--- a/Day 12/index.html
+++ b/Day 12/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
 
     <meta charset="UTF-8">
@@ -10,22 +10,26 @@
 </head>
 <body>
 
-    <section class="container">
-
-        <div class="row">
-            <form method="post">
-                <input type="text" placeholder="Type the title or author">
-                <button type="submit" name="search">Search</button>
-            </form>
+    <div class="clock">
+        <div class="clock-face">
+            <div class="stick hour-stick"></div>
+            <div class="stick min-stick"></div>
+            <div class="stick sec-stick"></div>
+            <div class="number number-1">1</div>
+            <div class="number number-2">2</div>
+            <div class="number number-3">3</div>
+            <div class="number number-4">4</div>
+            <div class="number number-5">5</div>
+            <div class="number number-6">6</div>
+            <div class="number number-7">7</div>
+            <div class="number number-8">8</div>
+            <div class="number number-9">9</div>
+            <div class="number number-10">10</div>
+            <div class="number number-11">11</div>
+            <div class="number number-12">12</div>
         </div>
-        <div class="content">
-            
-        </div>
-
-    </section>
-
+    </div>
 
     <script src="js/scripts.js"></script>
-
 </body>
 </html>
