--- a/Day 13/index.html
+++ b/Day 13/index.html
@@ -4,35 +4,15 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dia 12</title>
+    <title>Dia 13</title>
     <link rel="stylesheet" href="css/styles.css">
 
 </head>
 <body>
 
-    <section class="container">
-
-        <div class="row">
-            <form method="post">
-                <input type="text" placeholder="Type the title or author">
-                <button type="submit" name="search">Search</button>
-            </form>
-        </div>
-        <div class="content">
-            
-            <div class="book">
-                <div class="img-book"></div>
-                <div class="data-book">
-                    <p class="title-book">Lorem Ipsum</p>
-                    <p class="author-book">Loremzete</p>
-                    <p class="description-book">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo commodi quibusdam repellendus iusto est, minus eius vero velit sunt illum optio eos incidunt repudiandae ad aperiam molestias consequuntur? Esse, nesciunt. Voluptas repellat praesentium dolorum officiis deserunt soluta sint. Facilis, in! Ratione, enim rem!</p>
-                </div>
-            </div>
-
-        </div>
-
-    </section>
-
+    <div class="movement">
+        <h2 contenteditable>🔥 [13 / 30] | JS</h2>
+    </div>
 
     <script src="js/scripts.js"></script>
 
