--- a/Day 14/index.html
+++ b/Day 14/index.html
@@ -14,11 +14,28 @@
     <nav class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="index.html">MovieInfo</a>
+                <a class="navbar-brand" href="index.html">Filmes</a>
             </div>
         </div>
     </nav>
 
+    <div class="container">
+        <div class="jumbotron">
+            <h3 class="text-center">
+                Procurar filme
+            </h3>
+            <form id="search">
+                <input type="text" placeholder="Digite o nome do filme" class="form-control" id="searchText">
+            </form>
+        </div>
+    </div>
+
+    <div class="container">
+        <div id="movies" class="row"></div>
+    </div>
+
+    <script src="js/jquery.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/scripts.js"></script>
     
 </body>
