Dia 17 , math game

--- a/Day 15/index.html
+++ b/Day 15/index.html
@@ -20,7 +20,7 @@
                 <div class="row input-data">
                     <form method="post">
 
-                        <input type="text" placeholder="Descrição" id="descricao" name="descricao">
+                        <input autocomplete="off " type="text" placeholder="Descrição" id="descricao" name="descricao">
                         <input type="number" placeholder="Valor" id="valor" name="valor">
                         <button type="submit">
                             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus-square" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
