--- a/Day 26/index.html
+++ b/Day 26/index.html
@@ -10,10 +10,12 @@
 
 </head>
 <body>
-    
+    <div id="effect"></div>
     <div class="center">
 
+        
         <p id="message">26 / 30 Javascript Code.<span></span></p>
+
 
     </div>
 
